# terminal_renderer

./: .gitignore  Cargo.toml  README.md  build.rs
.VSCodeCounter/2022-12-31_17-15-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-11_09-46-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
src/: app.rs  fun.rs  gui_display.rs  lib.rs  main.rs  terminal_display.rs  test_data.rs
src/app/: gui_display.rs  mod.rs  state.rs  terminal_display.rs
src/gui_display/: draw.rs
src/rasmus_lib/: ansi_term_old.rs  debug_utils.rs  events.rs  flags.rs  macros.rs  mod.rs  referenceable_vec.rs  utils.rs
src/rasmus_lib/ansi_term/: mod.rs
src/rasmus_lib/ansi_term/private/: cursor.rs  format.rs  line.rs  mod.rs  screen.rs
src/rasmus_lib/input/: mod.rs  string_editor.rs
src/rasmus_lib/linear_ui/: implementations.rs  mod.rs  widgets.rs
src/rasmus_lib/math/: general.rs  matrix.rs  mod.rs  vec.rs
src/rasmus_lib/math/vec/: vec_ops.rs
src/rasmus_lib/ui/: app.rs  gui.rs  input_manager.rs  mod.rs  panel.rs  render.rs
src/render_3d/: buffer.rs  camera.rs  color.rs  drawers.rs  mesh_loader.rs  mod.rs  panel.rs  quaternion.rs  renderer.rs  scene.rs  shader.rs  shader_fn.rs  transform.rs
src/render_3d/color/: color_ops.rs
