[package]
name = "terminal_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
crossterm = "0.25.0"
ansi-parser = "0.8.0"
itertools = "0.10.5"
# lazy_static = "1.4.0"
# arrayvec = "0.7.2"
num-traits = "0.2.15"
num = "0.4.0"
# assert_approx_eq = "1.1.0"
approx = "0.5.1"
# term_size = "0.3.2"
colors-transform = "0.2.4"
static_init = "1.0.3"
winit = "0.27.5"
winit_input_helper = "0.13.0"
pixels = "0.11.0"

